--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+#btn>button{
+	background-color: black;
+	color:white;
+	border-radius: 5px;
+	border: none;
+	
+}
+ #btn>button:hover{
+	 background-color: yellow;
+	 color: black;
+	 border-radius:30px;
+ }
