--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 
 /* Your CSS Code here. */
 #btn>button{
-	background-color: black;
-	color:rgb(0, 0, 0);
+	background-color: rgb(0, 0, 0);
+	color: white;
 	border-radius: 5px;
 	border: none;
 	
