--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 
 /* Your CSS Code here. */
-#btn>button{
+.btn>button{
 	background-color:black;
 	color: white;
 	border-radius: 5px;
 	border: none;
 	
 }
- #btn>button:hover{
+ .btn>button:hover{
 	 background-color: yellow;
 	 color: black;
 	 border-radius:30px;
