--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 /* Your CSS Code here. */
 #btn>button{
-	background-color:rgb(0,0,0);
+	background-color: black;
 	color: white;
 	border-radius: 5px;
 	border: none;
